--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -9,8 +9,10 @@
   }
 
   .container1{
-    display: Flex ;
-    align-items: right;
-    border: 1px solid blue;
+    /* display: flex; */
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid rgb(2, 2, 2);
 
   }
+
