--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,14 @@ code {
 }
 
   .PIC1{
-    display: flex;
-    width: 1100px;
-    height: 200px;
-    border: 2px solid #181522;
-    align-self: stretch;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
+
+  /* .container{
+    display: block ;
+    align-items: center;
+    border: 1px solid rgb(15, 15, 15);
+
+  } */
