--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,12 +7,73 @@
     width: 200px;
     height: 270px;
   }
-
-  .container1{
-    /* display: flex; */
+  .welcome {
+    width: 80%;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
-    border: 1px solid rgb(2, 2, 2);
+    /* border-color: black */
+  }
+
+  .container1{
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    /* border: 1px solid rgb(2, 2, 2); */
 
   }
+  .wrapper {
+    text-align: center;
+    /* max-height: 400px; */
+    /* border: 1px solid black; */
+  }
+  
+
+  @media screen and (max-width: 802px) {
+    .container1{
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: blueviolet;
+    }
+    .wrapper {
+      /* width: 80% */
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: gold;
+    }
+    .welcome {
+      width: 90%;
+      text-align: center;
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  
+  
+  @media screen and (max-width: 400px) {
+    .container1{
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: rgb(139, 15, 35);
+    }
+    .wrapper {
+      /* width: 80%; */
+      display: inline-flex;
+      padding-left: auto;
+      padding-right: auto;
+      background-color: gold;
+    }
+    .welcome {
+      width: 90%;
+      text-align: center;
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  
 
