--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
     monospace;
 }
 
-  .PIC1{
+.PIC1{
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -25,3 +25,6 @@ code {
     border: 1px solid rgb(15, 15, 15);
 
   } */
+.card{
+  position: static;
+}
