--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,79 +1,76 @@
+body {
+  font-family: "Rokkitt", serif;
+  /* font-size: 48px; */
+}
+.PIC {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 185px;
+  height: 250px;
+}
+.welcome {
+  width: 80%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  /* border-color: black */
+}
 
+.container1 {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  /* border: 1px solid rgb(2, 2, 2); */
+}
+.wrapper {
+  text-align: center;
+  /* max-height: 400px; */
+  /* border: 1px solid black; */
+}
 
-  .PIC{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 200px;
-    height: 270px;
-  }
-  .welcome {
-    width: 80%;
+@media screen and (max-width: 802px) {
+  .container1 {
     display: flex;
     margin-left: auto;
     margin-right: auto;
-    /* border-color: black */
-  }
-
-  .container1{
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    /* border: 1px solid rgb(2, 2, 2); */
-
+    /* background-color: blueviolet; */
   }
   .wrapper {
+    /* width: 80% */
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    /* background-color: gold; */
+  }
+  .welcome {
+    width: 90%;
     text-align: center;
-    /* max-height: 400px; */
-    /* border: 1px solid black; */
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
   }
-  
+}
 
-  @media screen and (max-width: 802px) {
-    .container1{
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: blueviolet;
-    }
-    .wrapper {
-      /* width: 80% */
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: gold;
-    }
-    .welcome {
-      width: 90%;
-      text-align: center;
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-    }
+@media screen and (max-width: 400px) {
+  .container1 {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    /* background-color: rgb(139, 15, 35); */
   }
-  
-  
-  @media screen and (max-width: 400px) {
-    .container1{
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: rgb(139, 15, 35);
-    }
-    .wrapper {
-      /* width: 80%; */
-      display: inline-flex;
-      padding-left: auto;
-      padding-right: auto;
-      background-color: gold;
-    }
-    .welcome {
-      width: 90%;
-      text-align: center;
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-    }
+  .wrapper {
+    /* width: 80%; */
+    display: inline-flex;
+    padding-left: auto;
+    padding-right: auto;
+    /* background-color: gold; */
   }
-  
-
+  .welcome {
+    width: 90%;
+    text-align: center;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
